ajout QCM et question directe avec tolerance

--- a/enseignantForm.html
+++ b/enseignantForm.html
@@ -31,7 +31,7 @@
     
     <!-- début section landing -->
     <div class="landing">
-        <form action="examsPage.html" method="post">
+        <form action="examsPage.html" method="post" target="_blank" >
             <div class="prenomNom">
                 <div class="nom">
                     Nom :
