formulaire etudiant modifie (ajouter login patie)

--- a/examsPage.html
+++ b/examsPage.html
@@ -54,8 +54,8 @@
 
   <div class="sideBar">
     <div class="imageUser">
-      <img src="./photos/unknown.webp" alt="">
-      <h2>Bonjour inconnu</h2>
+      <img class="profileImage" src="./photos/unknown.webp" alt="">
+      <h2 class="nomPrenom">inconnu</h2>
     </div>
     <div class="choose one">
       <img src="./photos/test.png" alt="">
@@ -86,7 +86,7 @@
     <div class="createExam">
       <div class="globalExamInformations">
         <div class="text">
-          <h3>Mr Ismail, pour commencer à créer l'examen, veuillez remplir les informations de l'examen dans ce formulaire</h3>
+          <h3><span class="tarhib">mr unknown</span>, pour commencer à créer l'examen, veuillez remplir les informations de l'examen dans ce formulaire</h3>
           <p>
             Vous devez indiquer le nom de l'examen ainsi que le groupe ciblé.  
             Une fois soumis, un lien sera généré pour que vos étudiants puissent y accéder.
