--- a/frontend/examsPage2.html
+++ b/frontend/examsPage2.html
@@ -3,9 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styleExams2.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <div class="container-fluid">
+          <i class="true nav fa-solid fa-bars text-white"></i>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Basculer la navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active home" aria-current="page" href="examsPage2.html">Accueil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Lien</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Menu déroulant
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Autre action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Quelque chose d'autre ici</a></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="d-flex align-items-center gap-4 image">
+              <h3 style="text-transform: uppercase;color: rgb(255, 255, 255);">phantom school</h3>
+              <a href="index.html">
+                <img style="max-width: 100%;width: 90px;background-color: white;border-radius: 10px;" src="./photos/l.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <div class="sideBar">
+        <div class="imageUser">
+          <img class="profileImage" src="./photos/unkownStudentMal.jpg" alt="">
+          <h2 class="nomPrenom">inconnu</h2>
+        </div>
+      </div>
+
+
+      <div class="section">
+        <div class="studentIntroPage">
+          <div class="imageTextpPrincipal">
+              <div class="text">
+                  <h2 class="userWelcome">welcome unknown</h2>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati placeat sit repellat perferendis accusantium non molestias, facilis maxime doloribus, hic eveniet, libero eum aliquam architecto! Necessitatibus, itaque ex. Explicabo, veritatis!</p>
+                  <button class="goToExamPass">commencer</button>
+              </div>
+              <div class="image">
+                  <img src="./photos/studentLanding1.png" alt="">
+              </div>
+          </div>
+          <i class="downSection fa-solid fa-angles-down"></i>
+          <div class="imageText one">
+              <div class="text">
+                  <h1>we are the best</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                </div>
+                <div class="image">
+                  <img src="./photos/studentLanding2.jpg" alt="">
+                </div>
+          </div>
+          <hr>
+          <div class="imageText two">
+                <div class="image">
+                  <img src="./photos/studentLanding3.jpg" alt="">
+                </div>
+                <div class="text">
+                  <h1>we are the best</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                </div>
+          </div>
+          <hr>
+          <div class="imageText three">
+                <div class="text">
+                  <h1>we are the best</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                </div>
+                <div class="image">
+                  <img class="lastImage" style="width: 1000px;" src="./photos/studentLanding4.jpg" alt="">
+                </div>
+            </div>
+            </div>
+            <footer class="student-intro-footer">
+              <p>Get ready to begin your exam</p>
+            </footer>
+
+            
+
+      <script src="examsBehaviour2.js"></script>
 </body>
 </html>
