continue espace etudiant modification (afficher les examens suvegarder)

--- a/frontend/examsPage2.html
+++ b/frontend/examsPage2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Autre action</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Quelque chose d'autre ici</a></li>
+                  <li><a class="dropdown-item" href="#">Autre contenu ici</a></li>
                 </ul>
               </li>
             </ul>
@@ -53,13 +53,12 @@
         </div>
       </div>
 
-
       <div class="section">
         <div class="studentIntroPage">
           <div class="imageTextpPrincipal">
               <div class="text">
-                  <h2 class="userWelcome">welcome unknown</h2>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati placeat sit repellat perferendis accusantium non molestias, facilis maxime doloribus, hic eveniet, libero eum aliquam architecto! Necessitatibus, itaque ex. Explicabo, veritatis!</p>
+                  <h2 class="userWelcome">bienvenue inconnu</h2>
+                  <p>Bienvenue sur votre espace étudiant ! Ici, vous pouvez commencer vos examens, suivre vos résultats et accéder aux ressources nécessaires pour réussir.</p>
                   <button class="goToExamPass">commencer</button>
               </div>
               <div class="image">
@@ -69,9 +68,9 @@
           <i class="downSection fa-solid fa-angles-down"></i>
           <div class="imageText one">
               <div class="text">
-                  <h1>we are the best</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                  <h1>nous sommes les meilleurs</h1>
+                  <p>Notre plateforme est conçue pour offrir une expérience d'examen fluide, intuitive et sécurisée pour tous les étudiants.</p>
+                  <p>Nous vous accompagnons à chaque étape, de l'inscription à la validation finale de vos examens.</p>
                 </div>
                 <div class="image">
                   <img src="./photos/studentLanding2.jpg" alt="">
@@ -83,17 +82,17 @@
                   <img src="./photos/studentLanding3.jpg" alt="">
                 </div>
                 <div class="text">
-                  <h1>we are the best</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                  <h1>nous sommes les meilleurs</h1>
+                  <p>Grâce à nos outils modernes, vous pouvez passer vos examens en toute confiance, avec un suivi en temps réel et une correction rapide.</p>
+                  <p>Préparez-vous à réussir avec nos conseils, ressources pédagogiques et simulations d'examen disponibles à tout moment.</p>
                 </div>
           </div>
           <hr>
           <div class="imageText three">
                 <div class="text">
-                  <h1>we are the best</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae inventore, minus ut animi tenetur, consequatur enim cum distinctio, perspiciatis natus illo fugiat nostrum. Repellendus, aperiam. Expedita rem dolore atque nesciunt?</p>
+                  <h1>nous sommes les meilleurs</h1>
+                  <p>Rejoignez notre communauté d'apprenants motivés, prêts à relever les défis scolaires dans un environnement dynamique.</p>
+                  <p>Votre réussite est notre priorité. Ensemble, construisons votre avenir dès maintenant.</p>
                 </div>
                 <div class="image">
                   <img class="lastImage" style="width: 1000px;" src="./photos/studentLanding4.jpg" alt="">
@@ -101,10 +100,8 @@
             </div>
             </div>
             <footer class="student-intro-footer">
-              <p>Get ready to begin your exam</p>
+              <p>Préparez-vous à commencer votre examen</p>
             </footer>
-
-            
 
       <script src="examsBehaviour2.js"></script>
 </body>
