--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="header">
         <div class="logo">
             <a href="index.html">
-                <img src="./photos/l.png" alt="Logo de Phantom School">
+                <img src="./photos/l2.png" alt="Logo de Phantom School">
             </a>
             <a href="index.html">
                 <h1>Phantom School</h1>
@@ -65,11 +65,7 @@
 <div class="services" id="service">
     <div class="special-heading">
         <h1>services</h1>
-        <p>vous commandez, nous réalisons</p> <!-- slogan traduit en français -->
-    </div>
-    <div class="intro">
-        <h1>nous créons les meilleurs examens du monde</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed labore veritatis illum necessitatibus? Perferendis nemo architecto eaque illum quasi dolorem, temporibus eos voluptate assumenda nam tempore reprehenderit dolor, adipisci debitis!</p>
+        <div class="underline"></div>
     </div>
     <div class="container">
         <div class="services-content">
@@ -77,6 +73,7 @@
             <div class="card">
                 <div class="text">
                     <h1>nous créons les meilleurs examens</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sunt obcaecati atque, aliquam aperiam?</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sunt obcaecati atque, aliquam aperiam?</p>
                 </div>
                 <div class="image">
@@ -91,12 +88,14 @@
                 <div class="text">
                     <h1>nous créons les meilleurs examens</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sunt obcaecati atque, aliquam aperiam?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sunt obcaecati atque, aliquam aperiam?</p>
                 </div>
             </div>
             <!-- troisième carte de service -->
             <div class="card">
                 <div class="text">
                     <h1>nous créons les meilleurs examens</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sont obcaecati atque, aliquam aperiam?</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sont obcaecati atque, aliquam aperiam?</p>
                 </div>
                 <div class="image">
@@ -111,6 +110,7 @@
                 <div class="text">
                     <h1>nous créons les meilleurs examens</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sunt obcaecati atque, aliquam aperiam?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sunt obcaecati atque, aliquam aperiam?</p>
                 </div>
             </div>
             <!-- cinquième carte de service -->
@@ -118,18 +118,20 @@
                 <div class="text">
                     <h1>nous créons les meilleurs examens</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sont obcaecati atque, aliquam aperiam?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sont obcaecati atque, aliquam aperiam?</p>
                 </div>
                 <div class="image">
-                    <img src="./photos/photo1.jpg" alt="">
+                    <img src="./photos/photo7.jpg" alt="">
                 </div>
             </div>
             <!-- sixième carte de service -->
             <div class="card">
                 <div class="image">
-                    <img src="./photos/photo4.jpg" alt="">
+                    <img src="./photos/photo8.jpg" alt="">
                 </div>
                 <div class="text">
                     <h1>nous créons les meilleurs examens</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sont obcaecati atque, aliquam aperiam?</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt veniam, dolor tenetur molestiae necessitatibus eveniet, dicta nisi quisquam fuga ab illum est perspiciatis quidem quae sont obcaecati atque, aliquam aperiam?</p>
                 </div>
             </div>
@@ -143,17 +145,14 @@
 <div class="about" id="about">
     <div class="special-heading">
         <h1>à propos</h1>
-        <p>nous sommes doués en</p> <!-- slogan traduit -->
-    </div>
-    <div class="intro">
-        <h1>nous sommes la meilleure équipe du monde</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed labore veritatis illum necessitatibus? Perferendis nemo architecto eaque illum quasi dolorem, temporibus eos voluptate assumenda nam tempore reprehenderit dolor, adipisci debitis!</p>
+        <div class="underline"></div>
     </div>
     <div class="container">
         <div class="about-content">
             <!-- texte de présentation -->
             <div class="text">
-                <h1>Le travail d'équipe est la clé d'un bel avenir</h1>
+                <h1>travail d'équipe, la clé d'un bel avenir</h1>
+                <p style="margin-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, explicabo labore perspiciatis optio assumenda eum porro alias eos totam amet animi saepe repellendus a quo sint sapiente quidem officiis ipsam?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, explicabo labore perspiciatis optio assumenda eum porro alias eos totam amet animi saepe repellendus a quo sint sapiente quidem officiis ipsam?</p>
             </div>
             <!-- image de la section à propos -->
@@ -169,11 +168,7 @@
 <div class="team" id="team">
     <div class="special-heading">
         <h1>équipe</h1>
-        <p>nous sommes doués en</p>
-    </div>
-    <div class="intro">
-        <h1>nous sommes la meilleure équipe du monde</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed labore veritatis illum necessitatibus? Perferendis nemo architecto eaque illum quasi dolorem, temporibus eos voluptate assumenda nam tempore reprehenderit dolor, adipisci debitis!</p>
+        <div class="underline"></div>
     </div>
     <div class="container">
         <div class="about2">
@@ -231,11 +226,7 @@
 <div class="contact" id="contact">
     <div class="special-heading">
         <h1>contact</h1>
-        <p>besoin d'aide ? nous sommes là</p> <!-- sous-titre traduit -->
-    </div>
-    <div class="intro">
-        <h1>nous avons le meilleur service au monde</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed labore veritatis illum necessitatibus? Perferendis nemo architecto eaque illum quasi dolorem, temporibus eos voluptate assumenda nam tempore reprehenderit dolor, adipisci debitis!</p>
+        <div class="underline"></div>
     </div>
     <div class="container">
         <div class="contact-content">
