--- a/enseignantForm.html
+++ b/enseignantForm.html
@@ -11,7 +11,7 @@
     <!-- début header -->
     <div class="header">
         <div class="logo">
-            <img src="./photos/l.png" alt="Logo Phantom School">
+            <img src="./photos/l2.png" alt="Logo Phantom School">
             <a href="index.html">
                 <h1>phantom school</h1>
             </a>
