affichage questions enchaînées avec timer

--- a/examsPage.html
+++ b/examsPage.html
@@ -44,7 +44,7 @@
         </ul>
         <div class="d-flex align-items-center gap-4 image">
           <h3 style="text-transform: uppercase;color: rgb(255, 255, 255);">phantom school</h3>
-          <a href="/index.html">
+          <a href="index.html">
             <img style="max-width: 100%;width: 90px;background-color: white;border-radius: 10px;" src="./photos/l.png" alt="">
           </a>
         </div>
